# rust-sandbox

./: Cargo.toml  README.md  template.yaml
.github/workflows/: aws-lambda-sample.yml
add-one/tests/: integration_test.rs
adder/src/: main.rs
aws-lambda-sample/: Cargo.toml  samconfig.toml  template.yaml
aws-lambda-sample/src/: main.rs
closures-iterators/src/: main.rs
minigrep/src/: lib.rs  main.rs
xtask/src/: main.rs
