[package]
name = "aws-lambda-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.6.1", default-features = false, features = ["cloudwatch_events"] }
lambda_runtime = "0.5.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


